force-app/main/default/objects/Plan_Year_Placement__c/Plan_Year_Placement__c.object-meta.xml
<CustomObject>
    <label>Plan Year Placement</label>
    <nameField>
        <displayFormat>{YYYY}-{0}</displayFormat>
        <label>Plan Year Placement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Year Placements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>