force-app/main/default/objects/Plan_Year_Placement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Plan Year Placements</relationshipLabel>
    <relationshipName>Plan_Year_Placements</relationshipName>
    <type>Lookup</type>
</CustomField>