force-app/main/default/objects/Plan_Year_Placement__c/fields/Placement_Team__c.field-meta.xml
<CustomField>
    <fullName>Placement_Team__c</fullName>
    <label>Placement Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Placement_Team</valueSetName>
    </valueSet>
</CustomField>